customize 404 page with BG image and error message

--- a/public/404.html
+++ b/public/404.html
@@ -3,15 +3,14 @@
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="../app/assets/stylesheets/404.css.scss">
 </head>
 
-<body>
-  <div class="dialog">
-    <div>
-      <h1>Something Went Wrong</h1>
-      <div>404</div>
-      <div>Page not Found!</div>
-    </div>
+<body id="page-not-found">
+  <div id="dialog">
+    <h1>Something Went Wrong!</h1>
+    <div id="status">404</div>
+    <div>Page not Found!</div>
   </div>
 </body>
 </html>
